# Sinflyer3D

./: CMakeLists.txt  fsrc_easy.frag  instrucitons.txt  main.cpp  modelloaderi.h  objloader_easy.cpp  objloader_easy.h  objmodel.cpp  objmodel.h  objmodelsets.cpp  objmodelsets.h  sinflyer.cpp  sinflyer.h  sinflyerchart.cpp  sinflyerchart.h  sinflyergl.cpp  sinflyergl.h  sinflyervideo.cpp  sinflyervideo.h  tcp_m.cpp  tcp_m.h  udp_m.cpp  udp_m.h  ui_sinflyer.cpp  ui_sinflyer.h  video_m.cpp  video_m.h  vsrc_easy.vert
